--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1920</width>
-    <height>1080</height>
+    <width>490</width>
+    <height>289</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -103,16 +103,19 @@ QCheckBox{
         <item>
          <layout class="QGridLayout" name="gridLayout_6" rowstretch="5,4,4,5">
           <property name="leftMargin">
-           <number>50</number>
+           <number>0</number>
           </property>
           <property name="topMargin">
-           <number>50</number>
+           <number>0</number>
           </property>
           <property name="rightMargin">
-           <number>50</number>
+           <number>0</number>
           </property>
           <property name="bottomMargin">
-           <number>50</number>
+           <number>0</number>
+          </property>
+          <property name="spacing">
+           <number>9</number>
           </property>
           <item row="2" column="1">
            <layout class="QGridLayout" name="gridLayout_9" rowstretch="5,5,5,1">
